[package]
name = "aksim"
version = "0.0.0"
authors = ["astral4"]
edition = "2021"
description = "A little project for calculating Arknights pull probabilities"
readme = "README.md"
repository = "https://github.com/astral4/aksim"
license = "MIT"

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "focus"
harness = false

[dependencies]
realfft = "3.3.0"

[dev-dependencies]
divan = "0.1.14"

[lints.rust]
future_incompatible = "warn"
unused = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
non_ascii_idents = "deny"
nonstandard_style = "deny"
noop_method_call = "deny"
rust_2018_idioms = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
unused_results = "deny"
unused_tuple_struct_fields = "deny"
incomplete_features = "allow"

[lints.clippy]
pedantic = "warn"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
panic = "abort"
lto = true
strip = true

[profile.bench]
lto = true
strip = true
